Fixes workflow location and adds the public rsvp endpoint to the .env file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Public (safe to expose). This is your Apps Script web app URL.
-PUBLIC_RSVP_ENDPOINT="https://script.google.com/macros/s/XXX/exec"
+PUBLIC_RSVP_ENDPOINT="https://script.google.com/macros/s/AKfycbzfDVcVYNH0LTgUFivlbbRviHund_aUlssVBSu9JNjmUTkmG6MnkjzC8YGz8YkNwwfM/exec"
 
 # For GitHub Pages:
 SITE_URL="https://<github-user>.github.io"
