--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 PUBLIC_RSVP_ENDPOINT="https://script.google.com/macros/s/AKfycbzfDVcVYNH0LTgUFivlbbRviHund_aUlssVBSu9JNjmUTkmG6MnkjzC8YGz8YkNwwfM/exec"
 
 # For GitHub Pages:
-SITE_URL="https://<github-user>.github.io"
-BASE_PATH="/<repo-name>"
+SITE_URL="https://Rexramtech.github.io"
+BASE_PATH="/es"
